--- a/site_dashboard_django/templates/dash/index.html
+++ b/site_dashboard_django/templates/dash/index.html
@@ -7,8 +7,8 @@ This is index title
 {% block content %}
 
 
-{{data1}}
-{{data2}}
+<h1>Coucou Sarah</h1>
+
 <!--
 {% for task in Tasks %}
 {{task.name|lower}}
