--- a/site_dashboard_django/templates/dash/index.html
+++ b/site_dashboard_django/templates/dash/index.html
@@ -17,6 +17,7 @@ This is index title
 
 
 <div class="flex flex-row">
+    
     <div class="basis-3/4"><canvas class="p-10" id="chartLine"></canvas></div>
     
 </div>
@@ -33,9 +34,9 @@ This is index title
       labels: labels,
       datasets: [
         {
-          label: "My First dataset",
-          backgroundColor: "hsl(252, 82.9%, 67.8%)",
-          borderColor: "hsl(252, 82.9%, 67.8%)",
+          label: "Évolution des tâches",
+          backgroundColor: "hsl(142, 69%, 58%)",
+          borderColor: "hsl(142, 69%, 58%)",
           data: {{data2|safe}},
         },
       ],
