--- a/site_dashboard_django/templates/dash/index.html
+++ b/site_dashboard_django/templates/dash/index.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 
 {% block title %}
-This is index title
+Accueil
 {% endblock title %}
 
 {% block content %}
+
+
+
+
+
+
+
 
 
 
@@ -13,17 +20,41 @@ This is index title
 {{task.name|lower}}
 {% endfor %}
 -->
-
-
-
-<div class="flex flex-row">
-    
-    <div class="basis-3/4"><canvas class="p-10" id="chartLine"></canvas></div>
-    
+<div class="grid md:grid-cols-1 gap-4 sm:grid-cols-1">
+<div>
+  <div class="  w-full  rounded-lg border-slate-100 bg-white shadow-md p-4" >
+    <canvas style="position:relative; height:200px; width:100%" id="chartLine"></canvas>
+  </div>
 </div>
+<div>
 </div>
+
+<div class="grid md:grid-cols-2 gap-4 sm:grid-cols-1">
+  <div class="  w-full rounded-lg border-slate-100 bg-white shadow-md p-4 " >
+    <h1 class="text-1xl pb-2">Événements à venir</h1>
+    
+    <div class="grid grid-cols-1 divide-y">
+    {% for task in Tasks %}
+    <h2 class="text-sm py-2">{{task.name}}</h2>
+    {% endfor %}
+    </div>
+  </div>
+  <div class="  w-full rounded-lg border-slate-100 bg-white shadow-md p-4 " >
+    <h1 class="text-1xl pb-2">Événements à venir</h1>
+    
+    <div class="grid grid-cols-1 divide-y">
+    {% for task in Tasks %}
+    <h2 class="text-sm py-2">{{task.name}}</h2>
+    {% endfor %}
+    </div>
+  </div>
   
-  <!-- Required chart.js -->
+  
+    
+  </div>
+</div>
+
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   
   <!-- Chart line -->
