--- a/site_dashboard_django/templates/base.html
+++ b/site_dashboard_django/templates/base.html
@@ -13,7 +13,7 @@
 		
 	</head>
 
-	<body class="bg-slate-200">
+	<body class="bg-slate-200 font-normal">
 
 
 
@@ -35,6 +35,7 @@
 							<a href="{% url 'index' %}" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Accueil</a>
 							<a href="{% url 'projects' %}" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Projets</a>
 							<a href="" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Sport</a>
+							<a href="" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Argent</a>
 							<a href="" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">ManyLinks</a>
 							<a href="{% url 'about' %}" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">A propos</a>
 
