--- a/site_dashboard_django/templates/base.html
+++ b/site_dashboard_django/templates/base.html
@@ -13,7 +13,7 @@
 		
 	</head>
 
-	<body class="bg-slate-200 font-normal">
+	<body class="bg-gradient-to-r from-blue-400 to-teal-400 font-normal">
 
 
 
@@ -78,7 +78,7 @@
 
 
 
-	<div class="bg-slate-100 mx-4 my-4 px-8 py-8 rounded-lg shadow-md">	
+	<div class=" mt-0 mb-4 mx-1.5 px-2 py-2 rounded-b-lg  shadow-2xl ">	
       {% block content %}
          Body content
       {% endblock %}
