--- a/site_dashboard_django/templates/dash/index.html
+++ b/site_dashboard_django/templates/dash/index.html
@@ -20,7 +20,7 @@ Accueil
 {{task.name|lower}}
 {% endfor %}
 -->
-<div class="grid md:grid-cols-1 gap-4 sm:grid-cols-1">
+<div class="grid md:grid-cols-1 gap-1 sm:grid-cols-1">
 <div>
   <div class="  w-full  rounded-lg border-slate-100 bg-white shadow-md p-4" >
     <canvas style="position:relative; height:200px; width:100%" id="chartLine"></canvas>
@@ -29,11 +29,11 @@ Accueil
 <div>
 </div>
 
-<div class="grid md:grid-cols-2 gap-4 sm:grid-cols-1">
+<div class="grid md:grid-cols-2 gap-2 sm:grid-cols-1">
 
   <div class="  w-full rounded-lg border-slate-100 bg-white shadow-md p-0 " >
 
-    <h1 class="text-1xl p-2 bg-green-100 text-slate-800 rounded-t-lg ">TODO (PBL projets perso en cours)</h1>
+    <h1 class="text-1xl p-2 bg-green-100 rounded-t-lg ">TODO (PBL projets perso en cours)</h1>
     <div class="grid grid-cols-1 divide-y">
 
     {% for project in Projects %}
@@ -47,7 +47,7 @@ Accueil
 
 
 
-    <h1 class="text-1xl p-2 bg-green-100 text-slate-800	">TODO Aujourd'hui ({{Now}})</h1>
+    <h1 class="text-1xl p-2 bg-green-100">TODO Aujourd'hui ({{Now}})</h1>
     <div class="grid grid-cols-1 divide-y">
     {% for task in Tasks %}
     <h2 class="text-sm py-2 px-2">{{task.name}}</h2>
