--- a/site_dashboard_django/templates/dash/about.html
+++ b/site_dashboard_django/templates/dash/about.html
@@ -5,13 +5,16 @@ Projets
 {% endblock title %}
 
 {% block content %}
-
-<h1 class="text-lg pb-4">A propos</h1>
+<div class="rounded-lg bg-slate-50 p-4 h-96">
+<h1 class="text-2xl pb-4">A propos</h1>
 <hr>
 
     <div class="py-4"></div>
     <img src="{% static '/img/tailwind_logo.png' %}" class="object-contain w-32 pb-4" >
     <img src="{% static '/img/django_logo.png' %}" class="object-contain w-32 pb-4 " >
+    <img src="{% static '/img/chartjs_logo.png' %}" class="object-contain w-8 pb-4 " >
+
+</div>
 {% endblock content %}
 
 
