--- a/site_dashboard_django/templates/dash/projects.html
+++ b/site_dashboard_django/templates/dash/projects.html
@@ -7,10 +7,24 @@ Projets
 {% block content %}
 
 
-<div class="rounded-lg bg-slate-50 p-4 h-96">
+<div class="rounded-lg bg-slate-50 p-4 min-h-96 grid md:grid-cols-3 gap-4 sm:grid-cols-1">
 
-<h1 class="text-2xl">Projets</h1>
-<hr class="mb-4 mt-2">
+<div class="col-span-3">
+    <ul class="flex justify-between ">
+        <li class="mr-3">
+          <h1 class="inline-block text-2xl" href="#">Projets</h1>
+        </li>
+        <li class="mr-3">
+          <button class="inline-block py-2 px-4 text-green-400 cursor-not-allowed border-2 border-green-400 rounded-lg hover:border-white hover:text-white hover:bg-green-400" href="#">Ajouter</button>
+        </li>
+      </ul>
+      <hr class="mb-4 mt-2">
+    </div>
+
+
+
+<div class=" col-span-2">
+    
 <div >
 {% for project in Projects %}
 <div class="shadow-md rounded-lg px-4 py-2 bg-white grid  grid-cols-2 grid-rows-0 mb-4">
@@ -31,9 +45,23 @@ Projets
 </div>
 {% endfor %}
 </div>
+</div>
 
+
+
+
+<div class="w-full shadow-md bg-white rounded-lg p-4">
+    <h2 class="text-lg">Ajouter un projet</h2>
+    <hr class="m-2">
+    {% include 'form_template.html' with action='/dashboard/projects/' btn_label='Ajouter' %}
+    </div>
 
 </div>
+
+
+
+
+
 
 {% endblock content %}
 
