--- a/site_dashboard_django/templates/dash/projects.html
+++ b/site_dashboard_django/templates/dash/projects.html
@@ -7,15 +7,15 @@ Projets
 {% block content %}
 
 
-<div class="rounded-lg bg-slate-50 p-4 min-h-96 grid  md:grid-cols-3 gap-4 sm:grid-cols-1 ">
+<div class="rounded-lg bg-slate-50 p-4 min-h-96 grid grid-cols-3 gap-8 ">
 
-<div class="col-span-3">
+<div class=" col-span-3">
     <ul class="flex justify-between ">
         <li class="mr-3">
           <h1 class="inline-block text-2xl" href="#">Projets</h1>
         </li>
         <li class="mr-3">
-          <button class="inline-block py-2 px-4 text-green-400 cursor-not-allowed border-2 border-green-400 rounded-lg hover:border-white hover:text-white hover:bg-green-400" href="#">Ajouter</button>
+          <button class="hide-show inline-block py-2 px-4 text-green-400 cursor-not-allowed border-2 border-green-400 rounded-lg hover:border-white hover:text-white hover:bg-green-400" href="#">Ajouter</button>
         </li>
       </ul>
       <hr class="mb-4 mt-2">
@@ -23,7 +23,7 @@ Projets
 
 
 
-<div class=" col-span-2">
+<div class=" projects lg:col-span-2 sm:col-span-3 col-span-3">
     
 <div >
 {% for project in Projects %}
@@ -50,7 +50,7 @@ Projets
 
 
 
-<div class="w-full shadow-md bg-white rounded-lg p-4">
+<div class="hide-show-item w-full shadow-md bg-white rounded-lg p-4 lg:col-span-1 sm:col-span-3 col-span-3">
     <h2 class="text-lg">Ajouter un projet</h2>
     <hr class="m-2">
     {% include 'form_template.html' with action='/dashboard/projects/' btn_label='Ajouter' %}
@@ -58,6 +58,30 @@ Projets
 
 </div>
 
+<script>
+    const btn_projects = document.querySelector("button.hide-show");
+    const element = document.querySelector(".hide-show-item");
+    const projects = document.querySelector(".projects");
+    var count = 0;
+    element.classList.toggle("hidden");
+    projects.classList.replace("lg:col-span-2", "lg:col-span-3");
+
+    btn_projects.addEventListener("click", () => {
+        element.classList.toggle("hidden");
+
+        count ++;
+        if(count%2 == 0){
+            projects.classList.replace("lg:col-span-2", "lg:col-span-3");
+
+
+        }else{
+            projects.classList.replace("lg:col-span-3", "lg:col-span-2");
+         }
+        
+        
+        
+    });
+</script>
 
 
 
