--- a/site_dashboard_django/templates/dash/projects.html
+++ b/site_dashboard_django/templates/dash/projects.html
@@ -15,7 +15,7 @@ Projets
           <h1 class="inline-block text-2xl" href="#">Projets</h1>
         </li>
         <li class="mr-3">
-          <button class="hide-show inline-block py-2 px-4 text-green-400 cursor-not-allowed border-2 border-green-400 rounded-lg hover:border-white hover:text-white hover:bg-green-400" href="#">Ajouter</button>
+          <button class="hide-show inline-block py-2 px-4 text-green-400 cursor-not-allowed border-2 border-green-400 rounded-lg hover:border-white hover:text-white hover:bg-green-400" >Ajouter</button>
         </li>
       </ul>
       <hr class="mb-4 mt-2">
