--- a/site_dashboard_django/templates/base.html
+++ b/site_dashboard_django/templates/base.html
@@ -10,73 +10,43 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		{% tailwind_css %}
-		
+		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 	</head>
 
 	<body class="bg-gradient-to-r from-blue-400 to-teal-400 font-normal">
 
+{% include 'navbar.html'%}
+{% if message and type %}
+		{% include 'alert.html'%}
+		{% endif %}
+
+<div class="grid grid-cols-10 gap-0">
+	
+	<div class=" bg-slate-900 rounded-br-lg  bg-slate-600 lg:col-span-1 md:col-span-0 sm:col-span-0 col-span-0">
+		<div class="grid grid-cols-1 gap-0 lg:mb-6">
+			<div class="w-0 h-0 lg:h-20 lg:w-20 bg-slate-100 mx-auto lg:mt-6 rounded-lg"></div>
+			<div class="w-0 h-0 lg:h-20 lg:w-20 bg-slate-100 mx-auto lg:mt-6 rounded-lg"></div>
+			<div class="w-0 h-0 lg:h-20 lg:w-20 bg-slate-100 mx-auto lg:mt-6 rounded-lg"></div>
+			<div class="w-0 h-0 lg:h-20 lg:w-20 bg-slate-100 mx-auto lg:mt-6 rounded-lg"></div>
+			<div class="w-0 h-0 lg:h-20 lg:w-20 bg-slate-100 mx-auto lg:mt-6 rounded-lg"></div>
 
 
 
-		<nav class="bg-white shadow-md">
-			<div class="max-w-6xl mx-auto px-4">
-				<div class="flex justify-between">
-					<div class="flex space-x-7">
-						<div>
-							<!-- Website Logo -->
-							<a href="{% url 'index' %}" class="flex items-center py-4 px-2">
-								<img src="{% static 'img/serval.png' %}" alt="Logo" class="h-8 w-8 mr-2">
-								<span class="font-semibold text-gray-500 text-lg">Dashboard</span>
-							</a>
-						</div>
-						<!-- Primary Navbar items -->
-						<div class="hidden md:flex items-center space-x-1">
-							<!--py-4 px-2 text-green-500 border-b-4 border-green-500 font-semibold -->
-							<a href="{% url 'index' %}" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Accueil</a>
-							<a href="{% url 'projects' %}" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Projets</a>
-							<a href="" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Sport</a>
-							<a href="" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Argent</a>
-							<a href="" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">ManyLinks</a>
-							<a href="{% url 'about' %}" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">A propos</a>
 
-						</div>
-					</div>
-					<!-- Secondary Navbar items -->
-					<div class="hidden md:flex items-center space-x-3 ">
-						<a href="{% url 'admin:index' %}" class="py-2 px-2 font-medium text-gray-500 rounded bg-slate-100 hover:bg-green-500 hover:text-white transition duration-300">Admin</a>
-					</div>
-					<!-- Mobile menu button -->
-					<div class="md:hidden flex items-center">
-						<button class="outline-none mobile-menu-button">
-						<svg class=" w-6 h-6 text-gray-500 hover:text-green-500 "
-							x-show="!showMenu"
-							fill="none"
-							stroke-linecap="round"
-							stroke-linejoin="round"
-							stroke-width="2"
-							viewBox="0 0 24 24"
-							stroke="currentColor"
-						>
-							<path d="M4 6h16M4 12h16M4 18h16"></path>
-						</svg>
-					</button>
-					</div>
-				</div>
-			</div>
-			<!-- mobile menu -->
-			<div class="hidden mobile-menu">
-				<ul class="">
-					<li class="active"><a href="index.html" class="block text-sm px-2 py-4 text-white bg-green-500 font-semibold">Home</a></li>
-					<li><a href="#services" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Services</a></li>
-					<li><a href="#about" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">About</a></li>
-					<li><a href="#contact" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Contact Us</a></li>
-				</ul>
-			</div>
-			
-		</nav>
+		</div>
+
+
+	</div>
+
+
+	<div class="col-span-10 lg:col-span-9 md:col-span-10 sm:col-span-10">
 
 
 
+		
+
+		
 
 	<div class=" mt-0 mb-4 mx-1.5 px-2 py-2 rounded-b-lg  shadow-2xl ">	
       {% block content %}
@@ -84,6 +54,7 @@
       {% endblock %}
 	</div>
 
+</div>
 
 
 
