--- a/site_dashboard_django/templates/calendar.html
+++ b/site_dashboard_django/templates/calendar.html
@@ -15,7 +15,7 @@
       slotMaxTime: '20:00',
       headerToolbar: {
         left: 'prev,next today',
-        center: 'title',
+        center: '',
         right: 'dayGridMonth,timeGridWeek,timeGridDay,listWeek'
       },
       initialView: 'dayGridMonth',
