--- a/site_dashboard_django/statics/calendar/main.css
+++ b/site_dashboard_django/statics/calendar/main.css
@@ -58,7 +58,7 @@
 .fc-theme-standard td,
   .fc-theme-standard th {
     border: 1px solid #ddd;
-    border: 1px solid var(--fc-border-color, #ddd);
+    border: 1px solid var(--fc-border-color, rgb(221, 221, 221));
   }
 /* for FF, which doesn't expand a 100% div within a table cell. use absolute positioning */
 /* inner-wrappers are responsible for being absolute */
@@ -168,7 +168,7 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
 }
 .fc .fc-button {
     display: inline-block;
-    font-weight: 400;
+    font-weight: 10;
     text-align: center;
     vertical-align: middle;
     -webkit-user-select: none;
@@ -177,10 +177,10 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
             user-select: none;
     background-color: transparent;
     border: 1px solid transparent;
-    padding: 0.4em 0.65em;
-    font-size: 1em;
+    padding: 0.2em 0.2em;
+    font-size: 0.75em;
     line-height: 1.5;
-    border-radius: 0.25em;
+    border-radius: 0em;
   }
 .fc .fc-button:hover {
     text-decoration: none;
@@ -244,7 +244,7 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
 }
 .fc .fc-button .fc-icon {
     vertical-align: middle;
-    font-size: 1.5em; /* bump up the size (but don't make it bigger than line-height of button, which is 1.5em also) */
+    font-size: 0.5em; /* bump up the size (but don't make it bigger than line-height of button, which is 1.5em also) */
   }
 .fc .fc-button-group {
     position: relative;
@@ -286,14 +286,18 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
     justify-content: space-between;
     align-items: center;
   }
+  .fc .fc-toolbar {
+    background: rgb(218,234,253);
+  background: linear-gradient(90deg, rgba(218,234,253,1) 0%, rgba(204,251,241,1) 100%);
+  }
 .fc .fc-toolbar.fc-header-toolbar {
-    margin-bottom: 1.5em;
+    margin-bottom: 0.2em;
   }
 .fc .fc-toolbar.fc-footer-toolbar {
     margin-top: 1.5em;
   }
 .fc .fc-toolbar-title {
-    font-size: 1.75em;
+    font-size: 1.2em;
     margin: 0;
   }
 .fc-direction-ltr .fc-toolbar > * > :not(:first-child) {
