--- a/site_dashboard_django/templates/base.html
+++ b/site_dashboard_django/templates/base.html
@@ -52,7 +52,7 @@
 		
 <div class="grid grid-cols-10 gap-0">
 	
-	<div class=" rounded-br-lg shadow-lg bg-slate-600 lg:col-span-1 col-span-0">
+	<div class=" rounded-br-lg shadow-lg bg-slate-600 lg:col-span-1 col-span-10 lg:h-full h-0">
 		{% include 'sidebar.html'%}
 	</div>
 
