--- a/site_dashboard_django/templates/dash/project_detail.html
+++ b/site_dashboard_django/templates/dash/project_detail.html
@@ -7,8 +7,9 @@ Projets
 {% block content %}
 <div class="rounded-lg bg-slate-50 p-4 ">
 
-<div class="relative">
+<div class="relative flex">
 <h1 class="text-2xl">Projet {{Project}}</h1>
+<h1 class="pl-20 text-xl">Burn Down chart</h1>
 <a href="#" class="absolute right-0 top-0 fa fa-edit"></a>
 </div>
 
