--- a/site_dashboard_django/templates/dash/us_detail.html
+++ b/site_dashboard_django/templates/dash/us_detail.html
@@ -20,7 +20,17 @@ Projets
 <div class="grid grid-cols-4 gap-4">
 
 <div class="p-4 shadow-lg rounded-lg overflow-hidden lg:col-span-3 col-span-4">
-hola
+{{US.project}}<br>
+{{US.name}}<br>
+{{US.product_back_log}}<br>
+{{US.theme}}<br>
+{{US.as_a}}<br>
+{{US.i_want}}<br>
+{{US.in_order_to}}<br>
+{{US.notes}}<br>
+{{US.priority}}<br>
+{{US.status}}<br>
+
 </div>
 
 
