--- a/site_dashboard_django/statics/calendar/main.css
+++ b/site_dashboard_django/statics/calendar/main.css
@@ -198,18 +198,18 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
 
 }
 .fc .fc-button-primary {
-    color: #fff;
-    color: var(--fc-button-text-color, #fff);
-    background-color: #2C3E50;
-    background-color: var(--fc-button-bg-color, #2C3E50);
-    border-color: #2C3E50;
+    color: rgb(53, 53, 53);
+    color: var(--fc-button-text-color, rgb(38, 38, 38));
+    background-color: #2dbb9c;
+    background-color: var(--fc-button-bg-color, #25c8c200);
+    border:0px #ffffff00;
     border-color: var(--fc-button-border-color, #2C3E50);
   }
 .fc .fc-button-primary:hover {
     color: #fff;
     color: var(--fc-button-text-color, #fff);
     background-color: #1e2b37;
-    background-color: var(--fc-button-hover-bg-color, #1e2b37);
+    background-color: var(--fc-button-hover-bg-color, #42be6f);
     border-color: #1a252f;
     border-color: var(--fc-button-hover-border-color, #1a252f);
   }
@@ -217,7 +217,7 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
     color: #fff;
     color: var(--fc-button-text-color, #fff);
     background-color: #2C3E50;
-    background-color: var(--fc-button-bg-color, #2C3E50);
+    background-color: var(--fc-button-bg-color, #2c3e5000);
     border-color: #2C3E50;
     border-color: var(--fc-button-border-color, #2C3E50); /* overrides :hover */
   }
@@ -229,13 +229,13 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
     color: #fff;
     color: var(--fc-button-text-color, #fff);
     background-color: #1a252f;
-    background-color: var(--fc-button-active-bg-color, #1a252f);
+    background-color: var(--fc-button-active-bg-color, #18d6b3);
     border-color: #151e27;
     border-color: var(--fc-button-active-border-color, #151e27);
   }
 .fc .fc-button-primary:not(:disabled):active:focus,
   .fc .fc-button-primary:not(:disabled).fc-button-active:focus {
-    box-shadow: 0 0 0 0.2rem rgba(76, 91, 106, 0.5);
+    box-shadow: 0 0 0 0.01rem rgba(76, 91, 106, 0.5);
   }
 .fc {
 
