--- a/site_dashboard_django/templates/navbar.html
+++ b/site_dashboard_django/templates/navbar.html
@@ -15,11 +15,11 @@
                     <!--py-4 px-2 text-green-500 border-b-4 border-green-500 font-semibold -->
                     <a href="{% url 'index' %}" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Accueil</a>
                     <a href="{% url 'projects' %}" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Projets</a>
-                    <a href="" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Sport</a>
+                    <!--<a href="" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Sport</a>
                     <a href="" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">Argent</a>
                     <a href="" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">ManyLinks</a>
                     <a href="{% url 'about' %}" class="py-4 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300">A propos</a>
-
+                    -->
                 </div>
             </div>
             <!-- Secondary Navbar items -->
@@ -47,10 +47,9 @@
     <!-- mobile menu -->
     <div class="hidden mobile-menu">
         <ul class="">
-            <li class="active"><a href="index.html" class="block text-sm px-2 py-4 text-white bg-green-500 font-semibold">Home</a></li>
-            <li><a href="#services" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Services</a></li>
-            <li><a href="#about" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">About</a></li>
-            <li><a href="#contact" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Contact Us</a></li>
+            <li class="active"><a href="{% url 'index' %}" class="block text-sm px-2 py-4 text-white bg-green-500 font-semibold">Acceuil</a></li>
+            <li><a href="{% url 'projects' %}" class="block text-sm px-2 py-4 hover:bg-green-500 transition duration-300">Projets</a></li>
+
         </ul>
     </div>
     
