--- a/site_dashboard_django/templates/dash/index.html
+++ b/site_dashboard_django/templates/dash/index.html
@@ -85,7 +85,7 @@ Accueil
       labels: labels,
       datasets: [
         {
-          label: "Évolution des tâches",
+          label: "Évolution de ta productivité",
           backgroundColor: "hsl(142, 69%, 58%)",
           borderColor: "hsl(142, 69%, 58%)",
           data: {{data2|safe}},
