--- a/site_dashboard_django/templates/dash/us_detail.html
+++ b/site_dashboard_django/templates/dash/us_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}
 Projets
 {% endblock title %}
@@ -17,9 +17,9 @@ Projets
 
 
 
-<div class="grid grid-cols-4 gap-4">
+<div class="grid grid-cols-4 gap-8 shadow-lg rounded-lg bg-white">
 
-<div class="p-4 shadow-lg rounded-lg overflow-hidden lg:col-span-3 col-span-4">
+<div class="p-4  rounded-l-lg bg-white overflow-hidden lg:col-span-3 col-span-4">
 {{US.project}}<br>
 {{US.name}}<br>
 {{US.product_back_log}}<br>
@@ -38,8 +38,8 @@ Projets
 
 
 
-<div class="shadow-lg rounded-lg overflow-hidden lg:col-span-1 col-span-4">
-hola
+<div class=" rounded-r-lg bg-white p-4 overflow-hidden lg:col-span-1 col-span-4">
+  <img src="{% static 'img/us.jpg' %}">
   </div>
 
 
