--- a/site_dashboard_django/templates/sidebar.html
+++ b/site_dashboard_django/templates/sidebar.html
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-1 mb-6  invisible lg:visible ">
 	<a href="#" class="invisible lg:visible">
 
-		<div class="text-center text-sm text-white p-4 invisible lg:visible">Modules / Liens</div>
+		<div class="text-center text-sm text-white p-4 invisible lg:visible">Modules / Liens (bientôt)</div>
 
 		<div class="w-0 h-0 lg:h-20 lg:w-20 bg-slate-800 mx-auto lg:mt-6 rounded-lg shadow-2xl invisible lg:visible ">
 			<span class="mx-6 mt-6 text-4xl text-green-500 fab fa-spotify invisible lg:visible "></span>
